--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,7 @@
         "ext-imagick": "*",
         "ext-mbstring": "*",
         "ext-json": "*",
-        "utopia-php/framework": "0.*.*",
-        "league/commonmark": "2.3.5"
+        "utopia-php/framework": "0.*.*"
     },
     "require-dev": {
         "vimeo/psalm": "4.1.1"
